# rax

./: Cargo.toml  README.md
.github/workflows/: README.md  ci.yml  cross.yml  differential.yml  full-suite.yml  kvm.yml  sanitizers.yml
docs/research/: aarch64-neon-vfp-fp16-2026-06.md
examples/: bench_loop.rs  run_microkernel.rs  run_test.rs
src/: config.rs  console.rs  isa_oracle.rs  lib.rs  main.rs  snapshot.rs  terminal.rs  timing.rs  vmm.rs
src/arch/: mod.rs  riscv.rs
src/arm/: cp15.rs  execution.rs  instructions.rs  vfp.rs
src/cpu/: exit.rs  mod.rs  state.rs
src/devices/: ac97.rs  ahci.rs  bus.rs  dma.rs  e1000.rs  fdc.rs  fw_cfg.rs  hpet.rs  ioapic.rs  lapic.rs  mod.rs  nvme.rs  pci.rs  pic.rs  pit.rs  rtc.rs  s5l8900.rs  serial.rs  uhci.rs  vga.rs
src/profiling/: mod.rs
src/riscv/: cpu.rs  crypto.rs  csr.rs  decode.rs  disasm.rs  float.rs  memory.rs  mod.rs  rvc.rs
src/smir/: context.rs  flags.rs  interp.rs  memory.rs  mod.rs  ops.rs  (+2 more)
tests/: aarch64_smir_native.rs  arm32_gen.rs  arm_diff.rs  arm_diff32.rs  arm_vfp_a32.rs  asm_instructions.rs  diff_fuzz.rs  differential.rs  hexagon_bare_metal.rs  hexagon_cf_diff.rs  hexagon_diff.rs  hexagon_float_diff.rs  hexagon_hvx_diff.rs  hexagon_hvx_mem_diff.rs  hexagon_mem_diff.rs  hexagon_smir_lift.rs  isa_oracle.rs  kvm_minimal.rs  neon_gen.rs  realmode_boot.rs  riscv_boot.rs  riscv_diff.rs  riscv_smir_lift.rs  riscv_vector.rs  smir_avx10_roundtrip.rs  smir_jit_vcpu.rs  x86_64.rs  x86_64_apx_map4_qemu_diff.rs  x86_64_avx512_inventory.rs  x86_64_evex_qemu_diff.rs  x86_64_unimplemented_manifests.rs  x86_64_unimplemented_qemu_diff.rs
(+831 files in other folders)
