[package]
name = "rax"
version = "0.1.0"
edition = "2024"

[features]
default = ["kvm"]
kvm = ["kvm-bindings", "kvm-ioctls"]
hvf = []
trace = []
debug = []
profiling = []
x86_64-suite = []
x86-suite = ["x86_64-suite"]
# SMIR native hot-block JIT tier (x86-64 host only). Off by default; brings in
# the W^X exec-mmap runtime (uses libc, always available on unix) + the
# X86_64Vcpu integration.
smir-jit = []

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
linux-loader = { version = "0.13.2", features = ["bzimage", "elf"] }
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.3"
zstd = "0.13"
thiserror = "2.0.17"
toml = "0.9.10"
bitflags = "2.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
vm-memory = { version = "0.16.2", features = ["backend-mmap"] }
goblin = "0.8.2"

# Profiling JSON export (optional)
serde_json = "1.0"

# Ctrl+C handling for graceful shutdown
ctrlc = "3.4"

# libc is used unconditionally on unix for terminal raw mode (termios), signal
# handlers that restore the TTY on crash, and the smir-jit W^X exec runtime.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# KVM support (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = "0.14.0", optional = true }
kvm-ioctls = { version = "0.24.0", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = 3

[dev-dependencies]
libc = "0.2"
